# whattimeisnow

./: .gitignore  README.md  ansible.cfg  hosts.yml  pyproject.toml
playbooks/: whattimeisnow.yml
roles/whattimeisnow/defaults/: main.yml
roles/whattimeisnow/files/: mainuser  whattimeisnow.html
roles/whattimeisnow/handlers/: main.yml
roles/whattimeisnow/meta/: main.yml
roles/whattimeisnow/tasks/: main.yml
roles/whattimeisnow/templates/: .keys.j2  config.json.j2  nginx_config.j2  xray-cert-renew.j2
roles/whattimeisnow/tests/: test.yml
roles/whattimeisnow/vars/: main.yml
