[tool.poetry]
name = "whattimeisnow"
version = "0.0.1"
description = "ansible role for deploy whattimeisnow"
authors = ["pudge_vibes"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ansible = "^12.0.0"

[tool.black]
line-length = 120
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
